code update 12:23 AM 20/07/2022

--- a/mitcbdayapp/.env
+++ b/mitcbdayapp/.env
@@ -5,3 +5,4 @@ EMAIL_HOST_PASSWORD=edonew@123
 ADMIN_EMAIL=bladesofsteel2009@hotmail.com
 SECRET_KEY=django-insecure-=it7f$tmb#vy=11%1$-%&91*6s_^!5mu5mtgo2rir1int%y0lt
 DB_SERVER_PASSWORD=runningmat3
+DB_PORT=5432
