--- a/requirements.txt
+++ b/requirements.txt
@@ -7,20 +7,26 @@ chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.1.2
 colorama==0.4.4
-cookiecutter==1.7.3
+cookiecutter==2.1.1
 cssselect2==0.6.0
 dj-database-url==0.5.0
-Django==4.0.5
+Django==4.0.6
+django-active-link==0.1.8
 django-browser-reload==1.3.0
 django-classy-tags==3.0.1
+django-cleanup==6.0.0
 django-environ==0.8.1
 django-formtools==2.3
+django-jquery==3.1.0
 django-js-asset==2.0.0
+django-mathfilters==1.0.0
 django-phonenumber-field==6.1.0
 django-polymorphic==3.1.0
+django-rename-app==0.1.3
 django-tailwind @ git+https://github.com/timonweb/django-tailwind.git@90288469f7a1659686157b44b5b4c9898846cf98
 django-widget-tweaks==1.4.12
 djangocms-admin-style==3.1.1
+djangorestframework==3.13.1
 html5lib==1.1
 idna==3.3
 Jinja2==3.1.1
@@ -32,11 +38,13 @@ pandas==1.4.2
 phonenumbers==8.12.46
 Pillow==9.1.1
 poyo==0.5.0
+psycopg2==2.9.3
 pycodestyle==2.8.0
 python-dateutil==2.8.2
 python-slugify==6.1.1
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
 reportlab==3.6.9
 requests==2.27.1
 six==1.16.0
